Policy Cilium l3-4/Policy Cilium l3-4/cart-policy-lv34.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-cart-lv34"
spec:
  description: "L3-L4 policy for the cartservice"
  endpointSelector:
    matchLabels:
      app: cartservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app: checkoutservice
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app: redis-cart
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
