Policy Cilium l3-4/Policy Cilium l3-4/loadgen-policy-lv34.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-loadgen-lv34"
spec:
  description: "L3-L4 policy for the loadgenerator service"
  endpointSelector:
    matchLabels:
      app: loadgenerator
  ingress:
  - {}
  egress:
  - toEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
